test/Parse/ConditionalCompilation/toplevel_parseaslibrary.code
// RUN: %target-typecheck-verify-language -parse-as-library -D FOO

// '-parse-as-library' doesn't allow expressions nor statements in #if blocks.

fn foo() {}

#if FOO
  foo() // expected-error {{expressions are not allowed at the top level}}
#else
  if true { foo() } // expected-error {{statements are not allowed at the top level}}
#endif
